--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <span class="gradient-text">AARAMBH</span>
                     <span class="year">2k25</span>
                 </h1>
-                <p class="subtitle">🔒 Cyber Security Freshers Party 🔒</p>
+                <p class="subtitle">🔒 Secure Freshers Party 🔒</p>
                 <p class="theme-text">Enter the Matrix of Knowledge</p>
                 <div class="decorative-line"></div>
             </div>
