--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="card-content">
                     <p class="invitation-text">
-                        Dear Firt Year,<br><br>
+                        Dear First Year,<br><br>
                         We, the senior, are excited to invite you to <strong>AARAMBH 2k25</strong> - A Cyber Security themed freshers party! 
                         Step into the digital realm where code meets celebration, and security meets socializing.
                     </p>
